classDiagram
class User {
    +UUID id
    +String first_name
    +String last_name
    +String email
    +DateTime created_at
    +DateTime updated_at
    +register()
    +update_profile()
}

class Place {
    +UUID id
      +String title
      +Float price
      +String location
      +DateTime created_at
      +DateTime updated_at
      +create_listing()
      +update_listing()
}

class Review {
    +UUID id
    +UUID user_id
    +UUID place_id
    +String comment
    +Integer rating
    +DateTime created_at
    +DateTime updated_at
    +submit_review()
}

class Amenity {
    +UUID id
    +String name
    +String description
    +DateTime created_at
    +DateTime updated_at
}

User "1" --> "*" Place : owns
User "1" --> "*" Review : writes
Place "1" --> "*" Review : receives
Place "*" --> "*" Amenity : includes
  